# ssd-engine

./: BENCHMARK.md  LICENSE  README.md  SSD Engine v3.0 Design Specification.md  pyproject.toml
docs/: API_REFERENCE.md  ROADMAP.md
ssd_engine/: __init__.py
ssd_engine/core/: __init__.py  ssd_core_engine_fast.py  ssd_pressure_system.py
ssd_engine/experimental/: __init__.py
ssd_engine/extensions/: __init__.py  ssd_external_knowledge.py  ssd_neuro_modulators.py  ssd_social_dynamics.py  ssd_ss_sensitivity.py  ssd_subjective_social_pressure.py  ssd_subjective_society.py
