[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssd-engine"
version = "2.0.0"
description = "Structural Subjectivity Dynamics (SSD) Theory - Core Engine Library"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SSD Research Team"}
]
keywords = ["ssd", "structural-subjectivity-dynamics", "cognitive-modeling", "psychological-simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/ssd-engine"
Documentation = "https://github.com/yourusername/ssd-engine#readme"
Repository = "https://github.com/yourusername/ssd-engine"

[tool.setuptools]
packages = ["ssd_engine", "ssd_engine.core", "ssd_engine.extensions", "ssd_engine.experimental"]
